@@ -20,6 +20,7 @@ DFHack future
     - digfort: improved csv parsing, add start() comment handling
     - exterminate: allow specifying a caste (exterminate gob:male)
     - createitem: in adventure mode it now defaults to the controlled unit as maker.
+    - autotrade: adds "(Un)mark All" options to both panes of trade screen.
 
   Siege engine plugin:
     - engine quality and distance to target now affect accuracy
